# taiwan-weather-notify

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
weatherbot/: __init__.py  app.py  database.py  scheduler.py  weather.py
